# super-tilt-bro-server

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
experiments/: extract_anim_info.py  extract_anim_info_v2.py  extract_player_routines_v2.py  game_ranking_pusher.py  local_server.sh  logindb_update.py
experiments/bytecode_update/: extract_mem_labels.py
experiments/bytecode_update/compile_bytecode/: compile_bytecode.py  extract_entry_points.py
experiments/systemd_units/: stb_login.service  stb_ranking.service  stb_replay.service
login_server/: __init__.py  restservice.py
python/: MANIFEST.in  pyproject.toml  setup.py
python/cpp/: mos6502
python/login_server/: login_server.py  logindb.py  restservice.py  udpservice.py
python/ranking_server/: __init__.py  ranking_server.py  rankingdb.py  restservice.py
python/replay_server/: __init__.py  replay_server.py  replaydb.py  restservice.py
ranking_server/: cli.py  ranking_server.py  rankingdb.py  restservice.py
replay_server/: cli.py  replaydb.py  restservice.py
tools/: bmov_to_fm2.cpp  fcs_writer.hpp
tools/bmov_to_fm2_data/: get_all.sh
